--- a/css/layout.css
+++ b/css/layout.css
@@ -1,16 +1,31 @@
 /*Layout*/
 .navbox-wrap{
 	position: absolute;
-	top: 100px;
-	width: 35%;
+	width: 30%;
 }
 
-.navbox {
-	width: 90%;
+.main-logo-wrap {
+	position: relative;
+	height: 100px;
+}
+
+.logo {
+	position: absolute;
+	left: 2px;
+	right: 2px;
+	top: 0px;
+	bottom: 0px;
+}
+
+.navbox, .main-logo-wrap {
+	width: 95%;
 	padding-left:0px;
 	margin: 2px auto;
 	max-width: 300px;
-	list-style:none;
+}
+
+.navbox {
+	list-style:none;	
 }
 
 .navbox li {
@@ -21,7 +36,7 @@
 .content-wrap {
 	position: absolute;
 	right:50px;
-	width: 60%;
+	left: 30%;
 	min-width: 400px;
 }
 
@@ -32,6 +47,7 @@
 
 .banner {
 	font-size: 1.25em;
+	height: 100px;
 }
 
 /*style*/
@@ -39,7 +55,16 @@ body {
 		font-family: "Calibri (body)", "Calibri", "sans-serif";
 }
 
+.logo {
+	background-color: #AAAAAA;
+	margin: 5px 8px;	
+}
+
 .navbox li {
 	background-color: #525252;	
 	color: white;
+}
+
+.navbox .active, .navbox .active:hover {
+	background-color: rgb(24,136,148);
 }
