--- a/css/layout.css
+++ b/css/layout.css
@@ -98,6 +98,13 @@ input, select {
 	width: 3em;
 }
 
+#showbox {
+	position: absolute;
+	top: 0px;
+	left: 60%;
+	margin-left: 0.5em;
+}
+
 /*style*/
 
 body {
@@ -122,7 +129,7 @@ body {
 	background-color: rgb(24,136,148);
 }
 
-.navbox li:hover {
+.navbox .navigable:hover {
 	background-color: #1EA9B8;	
 }
 
